# h4r_farmbot

./: README.md
h4r_farmbot_descriptions/: CMakeLists.txt  package.xml
h4r_farmbot_descriptions/cad/: Collision.scad  utm_collision.scad
h4r_farmbot_descriptions/def/: farmbot.xacro
h4r_farmbot_descriptions/def/common/: magnet_group.xacro  tool_collision.xacro
h4r_farmbot_descriptions/def/farmbot/: bed.xacro  boom.xacro  frame.xacro  properties.xacro  rails.xacro  toolbays.xacro  utm.xacro  vertical.xacro
h4r_farmbot_descriptions/def/test/: utm_test.xacro
h4r_farmbot_descriptions/def/tools/: seed_bin.xacro  seed_tray.xacro  seeder.xacro  soil_sensor.xacro  tool_bay.xacro  watering_nozzle.xacro  weeder.xacro
h4r_farmbot_descriptions/launch/: farmbot.launch  utm_mag_col.launch  valgrind.launch
h4r_farmbot_descriptions/mesh/: utm_collision.dae  utm_collision.stl
h4r_farmbot_descriptions/mesh/v1.2/: seed_bin.stl  seed_tray.stl  seeder.stl  seeder_needle.dae  seeder_needle_lock.dae  soil_sensor.stl  soil_sensor_pcb.dae  toolbay.stl  toolbay_fancy.dae  toolbay_flat.dae  utm.stl  utm_cover.stl  watering_nozzle_bottom.stl  watering_nozzle_top.stl  weeder.stl  weeder_blade.stl  weeder_spike.stl
h4r_farmbot_descriptions/worlds/: utm_test.world
h4r_farmbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
h4r_farmbot_moveit_config/config/: fake_controllers.yaml  h4r_farmbot.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
h4r_farmbot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit_rviz.launch  (+9 more)
