<?xml version="1.0"?>
<package>
  <name>h4r_farmbot_descriptions</name>
  <version>0.0.0</version>
  <description>The h4r_farmbot_descriptions package</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author     email="cyborgx1@gmail.com">Christian Holl</author>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>h4r_rapid_robot_xacros</run_depend>
  <run_depend>h4r_gazebo_stuff</run_depend>
  
  <export>
	<gazebo_ros gazebo_media_path="${prefix}"/>     
  </export>
</package>
